# redo-dev

./: .bazelrc  .gitattributes  .gitignore  .prettierrc.yml  .user.bazelrc  .yarnrc.yml  BUILD.bazel  README.md  WORKSPACE  WORKSPACE.bazel  package.json
.github/actions/cleanup/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: build.yml
openapi/rules/: rules.bzl
openapi/schema/: header.schema.json  param.schema.json  path.schema.json
redo/api-doc/: BUILD.bazel
redo/api-schema/: BUILD.bazel
redo/api-schema-js/: BUILD.bazel  package.json
redo/api-schema-js/src/: openapi.ts
redo/api-schema/src/: openapi.yaml
redo/api-schema/src/header/: page-next.header.yaml
redo/api-schema/src/param/: page-continue.param.yaml  page-size.param.yaml  return-id.param.yaml  store-id.param.yaml  updated-at-max.param.yaml  updated-at-min.param.yaml  webhook-id.param.yaml
redo/api-schema/src/path/: return-comments.path.yaml  return-flag.path.yaml  return-process.path.yaml  return-status.path.yaml  return.path.yaml  returns.path.yaml  webhook-replay.path.yaml  webhook.path.yaml  webhooks.path.yaml
redo/api-schema/src/schema/: address.schema.yaml  comment.schema.yaml  error.schema.json  error.schema.yaml  exchange-provision.schema.yaml  https-callback.schema.yaml  item-quantity.schema.yaml  money.schema.yaml  order-read.schema.yaml  order.schema.yaml  person-name.schema.yaml  phone-number.schema.yaml  product-variant.schema.yaml  product.schema.yaml  return-read.schema.yaml  return-status.schema.yaml  return.schema.yaml  webhook-create.schema.yaml  webhook-read.schema.yaml  webhook-topic.schema.yaml  webhook-update.schema.yaml  webhook-write.schema.yaml  weight.schema.yaml
redo/api-schema/src/webhook/: return.path.yaml  return.yaml
redo/web-doc/: BUILD.bazel
redo/web-doc/src/: shopify.md
stoplight/rules/: BUILD.bazel  push-runner.sh.tpl  rules.bzl
tools/bazel/: BUILD.bazel  deleted.bazelrc
tools/file/: files.bzl  workspace.bzl
tools/lint/: BUILD.bazel
tools/npm/: BUILD.bazel  npm.bzl  workspace.bzl
tools/openapi/: BUILD.bazel
tools/prettier/: BUILD.bazel
tools/redocly/: BUILD.bazel
tools/stoplight/: BUILD.bazel
tools/typescript/: BUILD.bazel  package.json  tsconfig.common.json
tools/yaml/: BUILD.bazel
yaml/rules/: BUILD.bazel  rules.bzl
