load("@aspect_bazel_lib//lib:copy_file.bzl", "copy_file")
load("//stoplight/rules:rules.bzl", "stoplight_push")

package(default_visibility = ["//visibility:public"])

stoplight_push(
    name = "deploy",
    srcs = [":openapi"],
    stoplight = "//tools/stoplight:bin",
)

copy_file(
    name = "openapi",
    src = "//redo/api-schema:openapi",
    out = "openapi.yaml",
    allow_symlink = True,
)
