load("//openapi/rules:rules.bzl", "openapi_bundle")

package(default_visibility = ["//visibility:public"])

genrule(
    name = "openapi",
    srcs = [":openapi0"],
    outs = ["openapi.yaml"],
    cmd = '$(execpath //yaml/rules:yq) "sort_keys(..)" < $< > $@',
    tools = ["//yaml/rules:yq"],
)

openapi_bundle(
    name = "openapi0",
    srcs = glob([
        "src/**/*.json",
        "src/**/*.yaml",
    ]),
    main = "src/openapi.yaml",
)
