load("@aspect_bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load("//stoplight/rules:rules.bzl", "stoplight_push")

package(default_visibility = ["//visibility:public"])

stoplight_push(
    name = "deploy",
    srcs = [":docs"],
    stoplight = "//tools/stoplight:bin",
)

copy_to_directory(
    name = "docs",  # must be in docs/ apparently
    srcs = glob(["src/**/*.md"]),
    root_paths = ["redo/web-doc/src"],
)
